welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:2: error: value coupstylo is not a member of Unit
def hunt() {while (!estSurBiscuit) {if (isFacingTrail()) {coupstylo();avance()} else {gauche();if (isFacingTrail()) {coupstylo();avance()} else {gauche();gauche();coupstylo();avance()}}coupstylo();prendBiscuit()}
                                                                                                                                                                                         ^